// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRowItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr rUOKR group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI cOHtJc space-x-4"
          >
            <span
              class="flex items-center -space-x-1"
              data-testid="DelegateRowItem__address"
            >
              <div
                class="sc-AxirZ dxHwgH border-theme-neutral-800"
              >
                <div
                  class="sc-AxhCb draJkT"
                  height="22"
                  width="22"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
            </span>
            <span
              data-testid="DelegateRowItem__username"
            >
              testwallet2
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__rank"
            >
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold justify-center text-theme-primary"
          >
            <span
              data-testid="DelegateRowItem__msq"
            >
              <div
                class="sc-AxhCb draJkT"
                height="22"
                width="22"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW text-theme-neutral-light justify-center"
          >
            <span
              data-testid="DelegateRowItem__status"
            >
              <div
                class="sc-AxhCb fxrKLH text-theme-neutral"
                height="1em"
                width="1em"
              />
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              class="whitespace-no-wrap"
              data-testid="DelegateRowItem__forged"
            >
              2,450.643 Ѧ
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__votes"
            >
              <small
                class="text-theme-neutral"
              >
                2,43%
              </small>
              <span
                class="ml-1 whitespace-no-wrap"
              >
                2,450.643 Ѧ
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-22"
        >
          <div
            class="sc-AxheI dgHnJc justify-end"
          >
            <span
              data-testid="DelegateRowItem__actions"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="sc-AxjAm dKkppo"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRowItem should render all columns 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr rUOKR group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI cOHtJc space-x-4"
          >
            <span
              class="flex items-center -space-x-1"
              data-testid="DelegateRowItem__address"
            >
              <div
                class="sc-AxirZ dxHwgH border-theme-neutral-800"
              >
                <div
                  class="sc-AxhCb draJkT"
                  height="22"
                  width="22"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
            </span>
            <span
              data-testid="DelegateRowItem__username"
            >
              testwallet2
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__rank"
            >
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold justify-center text-theme-primary"
          >
            <span
              data-testid="DelegateRowItem__msq"
            >
              <div
                class="sc-AxhCb draJkT"
                height="22"
                width="22"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW text-theme-neutral-light justify-center"
          >
            <span
              data-testid="DelegateRowItem__status"
            >
              <div
                class="sc-AxhCb fxrKLH text-theme-neutral"
                height="1em"
                width="1em"
              />
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              class="whitespace-no-wrap"
              data-testid="DelegateRowItem__forged"
            >
              2,450.643 Ѧ
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__votes"
            >
              <small
                class="text-theme-neutral"
              >
                2,43%
              </small>
              <span
                class="ml-1 whitespace-no-wrap"
              >
                2,450.643 Ѧ
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-22"
        >
          <div
            class="sc-AxheI dgHnJc justify-end"
          >
            <span
              data-testid="DelegateRowItem__actions"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="sc-AxjAm dKkppo"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRowItem should render confirmed status 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr rUOKR group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI cOHtJc space-x-4"
          >
            <span
              class="flex items-center -space-x-1"
              data-testid="DelegateRowItem__address"
            >
              <div
                class="sc-AxirZ dxHwgH border-theme-neutral-800"
              >
                <div
                  class="sc-AxhCb draJkT"
                  height="22"
                  width="22"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
            </span>
            <span
              data-testid="DelegateRowItem__username"
            >
              testwallet2
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__rank"
            >
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold justify-center text-theme-primary"
          >
            <span
              data-testid="DelegateRowItem__msq"
            >
              <div
                class="sc-AxhCb draJkT"
                height="22"
                width="22"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW text-theme-neutral-light justify-center"
          >
            <span
              data-testid="DelegateRowItem__status"
            >
              <div
                class="sc-AxhCb gCvBAn text-theme-success"
                height="30"
                width="30"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              class="whitespace-no-wrap"
              data-testid="DelegateRowItem__forged"
            >
              2,450.643 Ѧ
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__votes"
            >
              <small
                class="text-theme-neutral"
              >
                2,43%
              </small>
              <span
                class="ml-1 whitespace-no-wrap"
              >
                2,450.643 Ѧ
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-22"
        >
          <div
            class="sc-AxheI dgHnJc justify-end"
          >
            <span
              data-testid="DelegateRowItem__actions"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="sc-AxjAm dKkppo"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRowItem should render uncofirmed status 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-Axmtr rUOKR group"
        data-testid="TableRow"
      >
        <td>
          <div
            class="sc-AxheI cOHtJc space-x-4"
          >
            <span
              class="flex items-center -space-x-1"
              data-testid="DelegateRowItem__address"
            >
              <div
                class="sc-AxirZ dxHwgH border-theme-neutral-800"
              >
                <div
                  class="sc-AxhCb draJkT"
                  height="22"
                  width="22"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
            </span>
            <span
              data-testid="DelegateRowItem__username"
            >
              testwallet2
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__rank"
            >
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold justify-center text-theme-primary"
          >
            <span
              data-testid="DelegateRowItem__msq"
            >
              <div
                class="sc-AxhCb draJkT"
                height="22"
                width="22"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW text-theme-neutral-light justify-center"
          >
            <span
              data-testid="DelegateRowItem__status"
            >
              <div
                class="sc-AxhCb fxrKLH text-theme-neutral"
                height="1em"
                width="1em"
              />
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              class="whitespace-no-wrap"
              data-testid="DelegateRowItem__forged"
            >
              2,450.643 Ѧ
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxheI hkcigW font-semibold text-theme-secondary-text justify-end"
          >
            <span
              data-testid="DelegateRowItem__votes"
            >
              <small
                class="text-theme-neutral"
              >
                2,43%
              </small>
              <span
                class="ml-1 whitespace-no-wrap"
              >
                2,450.643 Ѧ
              </span>
            </span>
          </div>
        </td>
        <td
          class="w-22"
        >
          <div
            class="sc-AxheI dgHnJc justify-end"
          >
            <span
              data-testid="DelegateRowItem__actions"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <button
                  class="sc-AxjAm dKkppo"
                  type="button"
                >
                  <div
                    class="sc-AxhCb VoPpj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      settings.svg
                    </svg>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
